syntax = "proto3";

package auth;

option go_package = "github.com/ivmello/go-api-template/internal/handlers/grpc/auth";

service AuthService {
  rpc Register(RegisterRequest) returns (UserResponse);
  rpc Login(LoginRequest) returns (TokenResponse);
  rpc GetCurrentUser(GetCurrentUserRequest) returns (UserResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message GetCurrentUserRequest {}

message UserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string created_at = 4;
}

message TokenResponse {
  string token = 1;
}